profiling-using-exp-runner/cpu-dft-remote/experiments/dft_experiment/run_0_repetition_0/energibridge.log
sampling interval: 200, target function: DFT, input size: 1024
  File "<string>", line 1
    import sys; import os; import numpy as np; sys.path.append(/Users/rr/GreenLab/ProjectCode/profiling-using-exp-runner/packages); import cpu.dft as module; X = tuple(np.random.random(1024)); module.DFT(X)
                                                               ^
SyntaxError: invalid syntax
Energy consumption in joules: 15.75640312576294 for 0.43404534 sec of execution.
